fix horizontal card spacing

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -463,6 +463,7 @@ $card-title-text-transform-origin-y: 48px !default;
 
 $card-supporting-text-font-size: 15px !default;
 $card-supporting-text-line-height: 24px !default;
+$card-supporting-text-horizontal-padding: 19px !default;
 
 $card-actions-font-size: 15px !default;
 
